hphp/test/slow/parser/initializer-static-2.php.expectf

Fatal error: Expected constant expression for initializer in %s/initializer-static-2.php on line 4
